Prefer List.of over Arrays.asList